Resovled merge conflict

--- a/sites/all/themes/ebog/css/responsive.css
+++ b/sites/all/themes/ebog/css/responsive.css
@@ -345,8 +345,8 @@
     width: 280px !important;
   }
   
-  #elib-popup-login-form input,
-  #elib-popup-login-form p {
+  #ebog-download-login-form input,
+  #ebog-download-login-form p {
     width: 250px;
   }
   
