--- a/sites/all/themes/ebog/css/style.css
+++ b/sites/all/themes/ebog/css/style.css
@@ -1006,7 +1006,7 @@ input[type=submit]:hover {
   display: none;
 }
 
-#elib-popup-login-form p {
+#ebog-download-login-form p {
   width: 380px;
   margin-right: 0px;
 }
