--- a/sites/all/themes/ebog/css/style.css
+++ b/sites/all/themes/ebog/css/style.css
@@ -1246,17 +1246,17 @@ ul.nice-menu-down li.over a {
     color: #8c938b;
 }
 
-.ting-references-object .publisherDescription,
-.ting-references-object .publisherDescription .details {
+.ting-references-object .abstract,
+.ting-references-object .abstract .details {
     color: #000;
     margin-bottom: 25px;
 }
 
-.ting-references-object .publisherDescription .read-more {
+.ting-references-object .abstract .read-more {
     display: block !important;
 }
 
-.ting-references-object .publisherDescription .read-more:before {
+.ting-references-object .abstract .read-more:before {
     border-left: 6px solid transparent;
     border-right: 6px solid transparent;
     border-top: 6px solid #BE1F24;
@@ -1268,7 +1268,7 @@ ul.nice-menu-down li.over a {
     width: 0;
 }
 
-.ting-references-object .publisherDescription .read-less:before {
+.ting-references-object .abstract .read-less:before {
     border-left: 6px solid transparent;
     border-right: 6px solid transparent;
     border-bottom: 6px solid #BE1F24;
@@ -1280,10 +1280,10 @@ ul.nice-menu-down li.over a {
     width: 0;
 }
 
-.ting-references-object .publisherDescription p {
+.ting-references-object .abstract p {
     margin-bottom: 1em;
 }
 
-.ting-references-object .publisherDescription .section {
+.ting-references-object .abstract .section {
     font-weight: bold;
 }
