--- a/sites/all/themes/ebog/css/text.css
+++ b/sites/all/themes/ebog/css/text.css
@@ -49,7 +49,8 @@ h1#page-title.title,
 .panel-pane.pane-views-panes.pane-user-reviews-panel-pane-1 h2.pane-title,
 .statusBox h3,
 .voxb h3,
-.faq-question a {
+.faq-question a,
+#reference .reference h3 {
   font: 18px/28px 'DroidSerifRegular', Helvetica, Arial, sans-serif;
   font-weight: normal;
   text-transform: uppercase;
