Issue #8538 by cableman: Tried to restore theme changes and ting object ref. formatter

--- a/sites/all/themes/ebog/css/style.css
+++ b/sites/all/themes/ebog/css/style.css
@@ -449,8 +449,7 @@ voxb h3 {
   width: 120px;
 }
 
-.view-anmeldelser .field-field-book .record,
-.pane-front .feed-and-compare-front .record {
+.view-anmeldelser .field-field-book .record {
   float: left;
   width: 198px;
 }
@@ -534,17 +533,13 @@ voxb h3 {
   margin-right: 12px;
 }
 
+.feed_and_compare_item .display-book .left {
+  width: 130px;
+}
+
 .display-book .right {
   width: 200px;
   clear: none;
-}
-
-.feed-and-compare-front .display-book .right {
-  width: 140px;
-}
-
-.feed-and-compare-page .display-book .right {
-  width: 450px;
 }
 
 .display-book .picture img {
@@ -596,7 +591,7 @@ voxb h3 {
 
 .addRatingContainer .rating {
   width: 13px;
-  height: 12px !important;
+  height: 12px;
   background: url("../images/star.png") no-repeat scroll 0 -12px transparent;
   float: left;
   overflow: hidden;
@@ -980,7 +975,7 @@ input[type=submit]:hover {
 #ting-object .facebook-like {
   float: right;
   position: absolute;
-  left: 84%;
+  right: -30px;
   top: 0;
 }
 
@@ -1006,7 +1001,7 @@ input[type=submit]:hover {
   display: none;
 }
 
-#elib-popup-login-form p {
+#ebog-download-login-form p {
   width: 380px;
   margin-right: 0px;
 }
@@ -1041,6 +1036,10 @@ ul.nice-menu-down ul {
   margin-top: 20px;
   margin-right: 10px;
   padding-left: 65px;
+}
+
+ul.nice-menu-down ul {
+  margin: 1px;
 }
 
 ul.nice-menu-down {
@@ -1190,9 +1189,6 @@ ul.nice-menu-down li.over a {
 
 #read-offline {
   margin-right: 4px;
-<<<<<<< HEAD
-}
-=======
 }
 
 #ting-object {
